Prepare v4.1.0, compatible with novelibre v4.3
Refactor the code for better maintainability.

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>nv_templates</name>
 	<comment></comment>
 	<projects>
+		<project>novelibre</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
